eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app-api-deployment
  labels:
    app: bank-app-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-app-api
  template:
    metadata:
      labels:
        app: bank-app-api
    spec:
      containers:
      - name: bank-app-api
        image: 234660340542.dkr.ecr.ap-northeast-1.amazonaws.com/bankapp:latest
        ports:
        - containerPort: 8080
