eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: kubernetes.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  IngressClassName: nginx
  rules:
  - host: "234660340542.dkr.ecr.ap-northeast-1.amazonaws.com/bankapp"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-app-api-service
            port:
              number: 80
  tls:
    - host:
      - 234660340542.dkr.ecr.ap-northeast-1.amazonaws.com/bankapp
      secretName: bank-app-api-cert
